# CellMotus

./: .gitignore  CMakeLists.txt  LICENSE
assets/scripts/: boot.lua  deinit0.lua  dev-level.lua  dev.lua  init0.lua  levels.lua  resources.lua
assets/scripts/game/: ai.lua  animbg.lua  atlabel.lua  board.lua  cell.lua  conf.lua  gboard.lua  level.lua  lvlmanager.lua  main.lua  mlines.lua  sgame.lua  slevels.lua  sloading.lua  smenu.lua  soptions.lua  tutorial.lua
assets/scripts/sen/: actions.lua  audio.lua  camera.lua  core.lua  deque.lua  label.lua  node.lua  object.lua  quad.lua  rcoro.lua  resmanager.lua  scene.lua  scheduler.lua  settings.lua  sprite.lua  utils.lua
install/android/: cmkey  toolchains.sh
install/ios/: control  makeDEB.sh
install/linux/: CellMotus.1  CellMotus.desktop  aptget.sh  cellmotus.manpages  changelog  control  copyright  makedeb.sh  watch
install/mac/: CellMotus 0.9.0.dmg  dmg.sh
install/win32/: .desktop  .game  make.nsi  make64.nsi
res/: .gitignore  1024x500-source.cdr  1024x500.psd  512x512.psd  TFLOGO.psd  desc.txt  iconLogo.cdr  media.psd
res/Images.xcassets/AppIcon.appiconset/: Contents.json
src/: CMakeLists.txt
src/android/: .gitignore  AndroidManifest.xml  build.xml  project.properties
src/android/jni/: Android.mk  Application.mk  jni.cpp
src/android/res/values/: strings.xml
src/android/src/org/sen/lib/: SENActivity.java  SENGLSurfaceView.java  SENHandler.java  SENMusic.java  SENRenderer.java  SENSensor.java  SENSound.java
src/core/: CMakeLists.txt  asset.h  audio.h  batch.c  batch.h  camera.c  camera.h  config.h  engine.c  engine.h  font.c  font.h  hrtimer.h  image.c  image.h  input.c  input.h  khash.h  label.c  label.h  layer.c  layer.h  lmath.c  lmath.h  logger.h  luas.c  luas.h  macro.h  mutex.h  node.c  node.h  object.c  object.h  opengl.h  platform-config.h  platform.h  quad.c  quad.h  render.c  render.h  (+60 more)
src/core/shaders/: fs_col4f.h  fs_tex2f.h  fs_tex2f_col4f.h  fs_text_tex2f_col4f.h  vs_pos4f_col4f.h  vs_pos4f_tex2f.h  vs_pos4f_tex2f_col4f.h
src/ext/ft2/libs/android/: Android.mk
src/ext/ft2/libs/win32/32-bit/: freetype240MT.lib
src/ext/ft2/libs/win32/64-bit/: freetype240MT.lib
src/ext/glew/: glew.c
src/ext/glfw3/libs/win32/: glfw3dll.lib
src/ext/glfw3/libs/win32/32-bit/: glfw3.lib
src/ext/glfw3/libs/win32/64-bit/: glfw3.lib
src/ext/luajit/: build_android.sh  build_ios.sh  build_mac.sh
src/ext/luajit/include/: luaconf.h
src/ext/luajit/libs/android/: Android.mk
src/ext/luajit/libs/win32/: lua51.lib  lua51s.lib
src/ext/luajit/libs/win32/64-bit/: lua51s.lib
src/ext/luajit/src/src/: .gitignore  Android.mk  android-build
src/ext/png/include/win32/: png.h  pngconf.h
src/ext/png/libs/android/: Android.mk
src/ext/png/libs/win32/: libpng.lib
src/ext/png/libs/win32/32-bit/: libpng.lib
src/ext/png/libs/win32/64-bit/: libpng.lib
src/ext/zlib/libs/: zlib.lib
src/ext/zlib/libs/32-bit/: zlib.lib
src/ext/zlib/libs/64-bit/: zlib.lib
src/ios/: .gitignore  AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  Info.plist  LaunchScreen.xib  Main.storyboard  main.m
src/ios/CellMotus.xcodeproj/: project.pbxproj
src/ios/CellMotus.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/ios/CellMotus.xcodeproj/project.xcworkspace/xcshareddata/: CellMotus.xccheckout
src/ios/CellMotus.xcodeproj/project.xcworkspace/xcuserdata/user.xcuserdatad/: UserInterfaceState.xcuserstate
src/ios/CellMotus.xcodeproj/xcuserdata/user.xcuserdatad/xcschemes/: CellMotus.xcscheme  xcschememanagement.plist
src/linux/: CMakeLists.txt  main.c
src/mac/: CMakeLists.txt  Info.plist  main.c  main.icns
src/win32/: CMakeLists.txt  ai.c  ai.h  main.aps  main.c  main.rc
